--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-I was working on a reddit scraper to download data. It never came of anything but I managed to pick up a few decent techniques using python and beautifulsoup to parse out HTML. So when it came to be that I was asked to turn some data into 
+I was working on a reddit scraper to download data. It never came of anything but I managed to pick up a few decent techniques using python and beautifulsoup to parse out HTML. So when it came to be that I was asked to scrape some data out of a few web pages, figured I could use the knowledge from that reddit scraper for it. 
